<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24dp"
            android:title="@string/menu_home" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game_24dp"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_recognizes"
            android:icon="@drawable/recognizes_24dp"
            android:title="@string/menu_recognizes" />
        <item
            android:id="@+id/nav_platform"
            android:icon="@drawable/platform_24dp"
            android:title="@string/menu_platform" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings_24dp"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about_24dp"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/nav_night"
        android:icon="@drawable/night_menu"
        android:title="@string/menu_night" />


</menu>
