<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tl_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:fitsSystemWindows="true"
        app:navigationIcon="@drawable/back"
        app:title="@string/menu_settings"
        app:titleTextColor="@color/TEXT_ICONS">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_jiben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jibenshezhi"
            android:textColor="@color/settings_option_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_zhuangtai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_jiben"
            android:layout_marginTop="15dp"
            android:text="@string/xianshizhuangtailan"
            android:textColor="@color/TEXT_ICONS"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_zhuangtai_shuoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_zhuangtai"
            android:text="@string/zhuangtai_shuoming"
            android:textColor="@color/settings_text"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sh_zhuangtai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_jiben"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/tv_zhuangtai" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_zhuangtai_shuoming"
            android:layout_marginTop="15dp"
            android:background="@color/edit_find_text" />

        <LinearLayout
            android:id="@+id/ll_qingchu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/tv_qingchuhuancun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qingchuhuancun"
                android:textColor="@color/TEXT_ICONS"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_qingchu_shuoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qingchu_shuoming"
                android:textColor="@color/settings_text"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_qita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_qingchu"
            android:text="@string/jibenshezhi"
            android:textColor="@color/settings_option_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_guanyu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_qita"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/guanyu"
            android:textColor="@color/TEXT_ICONS"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>