<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/search_price_activity"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <com.example.gamesquery.EditTextWithDel
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:background="@null"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                android:hint="@string/et_price_find"
                android:imeOptions="actionSearch"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/edittext_cursor_color" />

            <!--<androidx.appcompat.widget.AppCompatButton-->
            <!--android:id="@+id/btn_price"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/btn_findgame_text" />-->
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_findgame_text"
                android:textColor="@color/text_selected"
                android:textSize="18.5sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/peice_annotate" />
</LinearLayout>