<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/pb_load"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_load"
        android:orientation="vertical"
        android:visibility="visible">

        <com.example.gamesquery.MyWebView
            android:id="@+id/wv_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pb_load"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_logo"
            android:textColor="@color/text_selected"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_logo"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/error_text"
            android:textColor="@color/TEXT_ICONS"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/error_btn_background"
            android:text="@string/error_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pb_load"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/anim_loading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="加载中..."
            android:textColor="@color/TEXT_ICONS"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>