<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_platform"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/iv_close_platform"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="45dp"
            android:src="@drawable/close" />

        <ImageView
            android:id="@+id/iv_home_platform"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/home_black" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_dividing_line_platform"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividing_line"
        android:layout_below="@id/rl"
        android:background="@color/lightGrey" />

    <ProgressBar
        android:id="@+id/pb_load_platform"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/iv_dividing_line_platform"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_load_platform"
        android:orientation="vertical"
        android:visibility="visible">

        <!--<androidx.core.widget.NestedScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <FrameLayout
                android:id="@+id/fl_platform"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        <!--</androidx.core.widget.NestedScrollView>-->
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/ll_error_platform"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pb_load_platform"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_logo"
            android:textColor="@color/text_selected"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_logo"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/error_text"
            android:textColor="@color/TEXT_ICONS"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_error_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/error_btn_background"
            android:text="@string/error_btn" />
    </LinearLayout>
</RelativeLayout>